# bharatrag

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  streamlit_app.py  test_embedder.py  upload_dataset.py
.github/workflows/: tests.yml
.streamlit/: config.toml
bharatrag/: __init__.py  cli.py
bharatrag/benchmarking/: __init__.py  corruption.py  instrumentation.py  models.py  plots.py  report.py  runner.py  stats.py
bharatrag/benchmarking/comparison/: __init__.py  deepeval_adapter.py  ragas_adapter.py
bharatrag/benchmarking/datasets/: __init__.py  indicqa.py  xquad.py
bharatrag/embeddings/: indic_embeddings.py
bharatrag/integrations/: __init__.py  langchain.py  llamaindex.py
bharatrag/metrics/: answer_relevance.py  context_relevance.py  groundedness.py
bharatrag/utils/: helpers.py
dashboard/: __init__.py  benchmark.py  components.py  theme.py  utils.py  visualizations.py
data/: benchmark.json
docs/: dashboard-ui-audit.md
docs/benchmarks/assets/: .gitkeep
examples/: hindi_rag_example.py  telugu_rag_example.py
scripts/: benchmark_public_datasets.py
tests/: test_benchmarking.py  test_cli.py  test_dashboard.py  test_metrics.py  test_theme.py
tests/fixtures/: indicqa_sample.json  xquad_sample.json
